// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playingfield should have no paused attribute when game is running 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="active"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
    >
      SVG markup
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-control"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
      >
        SVG markup
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield should have paused attribute when game is paused 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 0.25;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="inactive"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
    >
      SVG markup
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-control"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
      >
        SVG markup
      </svg>
    </button>
  </div>
</div>
`;

exports[`Playingfield should match snapshot 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 138px;
  margin: 0;
  will-change: transform;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c3 {
  padding: 0;
  border: 0;
  background: none;
  color: white;
  outline: none;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
  min-width: 50px;
  min-height: 50px;
}

.c4 {
  display: block;
  fill: currentColor;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c4 .sound-waves {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
  class="c0"
  data-status="active"
  data-testid="playfingfield"
>
  <figure
    class="c1"
    data-testid="logo-element"
    style="transform: translate(10px, 10px); color: white;"
  >
    <svg
      data-testid="cat-logo"
    >
      SVG markup
    </svg>
  </figure>
  <div
    class="c2"
    data-testid="controls"
  >
    <button
      class="c3"
      data-testid="controls-control"
      type="button"
    >
      <svg
        class="c4"
        data-testid="controls-icon"
        status="inactive"
      >
        SVG markup
      </svg>
    </button>
  </div>
</div>
`;
